...
            self.dropdownField(
                iconSymbol: .squareGrid2x2,
                placeholder: viewModel.categoryPlaceholder,
                value: viewModel.selectedCategory?.name,
                displaysChevron: viewModel.requiredToSelectCategory)
        }
        .accessibilityLabel("Choose Category")
    }
    
    private func accountField() -> some View {
        self.dropdownField(
            iconSymbol: .creditcardFill,
            placeholder: viewModel.accountPlaceholder,
...
